Changing otre name to glift.

--- a/src/BoxDisplayTest.html
+++ b/src/BoxDisplayTest.html
@@ -8,6 +8,8 @@
 
 
 <!-- AUTO-GEN-DEPS -->
+<!-- Otre -->
+<script type="text/javascript" src="./qunit.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="util/util.js"></script>
 <script type="text/javascript" src="util/colors.js"></script>
