--- a/src/RealBoardTest.html
+++ b/src/RealBoardTest.html
@@ -5,6 +5,8 @@
     <script type="text/javascript" src="libs/raphael-min.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
+<!-- Otre -->
+<script type="text/javascript" src="./qunit.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="util/util.js"></script>
 <script type="text/javascript" src="util/colors.js"></script>
