--- a/src/QunitTest.html
+++ b/src/QunitTest.html
@@ -11,7 +11,7 @@
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
-<script type="text/javascript" src="./otre.js"></script>
+<script type="text/javascript" src="./qunit.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="util/util.js"></script>
 <script type="text/javascript" src="util/colors.js"></script>
@@ -22,43 +22,9 @@
 <script type="text/javascript" src="util/point_test.js"></script>
 <script type="text/javascript" src="util/regions.js"></script>
 <script type="text/javascript" src="util/util_test.js"></script>
-<!-- Core -->
-<script type="text/javascript" src="core/core.js"></script>
-<script type="text/javascript" src="core/configs.js"></script>
-<script type="text/javascript" src="core/configs_test.js"></script>
-<script type="text/javascript" src="core/manager.js"></script>
-<script type="text/javascript" src="core/manager_test.js"></script>
-<script type="text/javascript" src="core/messenger.js"></script>
-<script type="text/javascript" src="core/options.js"></script>
-<script type="text/javascript" src="core/options_test.js"></script>
-<script type="text/javascript" src="core/static_problem_config.js"></script>
 <!-- Themes -->
 <script type="text/javascript" src="themes/themes.js"></script>
 <script type="text/javascript" src="themes/default.js"></script>
-<!-- Rules -->
-<script type="text/javascript" src="rules/rules.js"></script>
-<script type="text/javascript" src="rules/goban.js"></script>
-<script type="text/javascript" src="rules/goban_test.js"></script>
-<script type="text/javascript" src="rules/intersections.js"></script>
-<script type="text/javascript" src="rules/intersections_test.js"></script>
-<script type="text/javascript" src="rules/movenode.js"></script>
-<script type="text/javascript" src="rules/movetree.js"></script>
-<script type="text/javascript" src="rules/movetree_test.js"></script>
-<script type="text/javascript" src="rules/properties.js"></script>
-<script type="text/javascript" src="rules/properties_test.js"></script>
-<script type="text/javascript" src="rules/treepath.js"></script>
-<script type="text/javascript" src="rules/treepath_test.js"></script>
-<!-- Sgf -->
-<script type="text/javascript" src="sgf/sgf.js"></script>
-<script type="text/javascript" src="sgf/props.js"></script>
-<script type="text/javascript" src="sgf/sgf_grammar.js"></script>
-<!-- Controllers -->
-<script type="text/javascript" src="controllers/controllers.js"></script>
-<script type="text/javascript" src="controllers/base_controller.js"></script>
-<script type="text/javascript" src="controllers/base_controller_test.js"></script>
-<script type="text/javascript" src="controllers/controllers_test.js"></script>
-<script type="text/javascript" src="controllers/static_problem_study.js"></script>
-<script type="text/javascript" src="controllers/static_problem_study_test.js"></script>
 <!-- Displays -->
 <script type="text/javascript" src="displays/displays.js"></script>
 <script type="text/javascript" src="displays/bbox.js"></script>
@@ -88,20 +54,6 @@ $(document).ready(function() {
   logz = otre.util.logz;
   otre.utilTest();
   otre.util.pointTest();
-
-  otre.core.optionsTest();
-  otre.core.configsTest();
-  otre.core.managerTest();
-
-  otre.rules.movetreeTest();
-  otre.rules.treepathTest();
-  otre.rules.intersectionsTest();
-  otre.rules.gobanTest();
-  otre.rules.propertiesTest();
-
-  otre.controllers.baseControllerTest();
-  otre.controllers.staticProblemStudyTest();
-  otre.controllers.controllersTest();
 
   otre.displays.bboxTest();
   otre.displays.cropboxTest();
