--- a/src/RealBoardTest.html
+++ b/src/RealBoardTest.html
@@ -6,7 +6,7 @@
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
-<script type="text/javascript" src="./qunit.js"></script>
+<script type="text/javascript" src="./glift.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="util/util.js"></script>
 <script type="text/javascript" src="util/colors.js"></script>
