--- a/src/QunitTest.html
+++ b/src/QunitTest.html
@@ -6,8 +6,9 @@
 <script type="text/javascript" src="libs/jquery-1.7.2.min.js"></script>
 <link rel="stylesheet" href="qunit/qunit.css" type="text/css" media="screen" />
 <script type="text/javascript" src="qunit/qunit.js"></script>
+
 <!-- Testdata -->
-<script type="text/javascript" src="testdata/sgfs.js"></script>
+<!-- <script type="text/javascript" src="testdata/sgfs.js"></script> -->
 
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
