Refactoring displays work. Also, adding options processing.

--- a/src/QunitTest.html
+++ b/src/QunitTest.html
@@ -13,6 +13,8 @@
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
 <script type="text/javascript" src="./glift.js"></script>
+<script type="text/javascript" src="./glift_test.js"></script>
+<script type="text/javascript" src="./options.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="util/util.js"></script>
 <script type="text/javascript" src="util/colors.js"></script>
@@ -59,6 +61,8 @@ $(document).ready(function() {
   glift.displays.cropboxTest();
   glift.displays.environmentTest();
   glift.displays.boardpointsTest();
+
+  glift.gliftTest();
 });
 </script>
 
@@ -70,5 +74,6 @@ $(document).ready(function() {
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
   <div id="qunit-fixture">test markup, will be hidden</div>
+  <div id='glift_display1'><em></em></div>
 </body>
 <html>
