--- a/src/RealBoardTest.html
+++ b/src/RealBoardTest.html
@@ -7,6 +7,8 @@
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
 <script type="text/javascript" src="./glift.js"></script>
+<script type="text/javascript" src="./glift_test.js"></script>
+<script type="text/javascript" src="./options.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="util/util.js"></script>
 <script type="text/javascript" src="util/colors.js"></script>
