Massive refactoring to clean up the legacy otre code.

--- a/src/QunitTest.html
+++ b/src/QunitTest.html
@@ -7,6 +7,16 @@
 <link rel="stylesheet" href="qunit/qunit.css" type="text/css" media="screen" />
 <script type="text/javascript" src="qunit/qunit.js"></script>
 
+<style>
+#glift_display {
+  position: relative;
+  top: 0;
+  width: 400px;
+  height: 400px;
+  float: left;
+}
+</style>
+
 <!-- Testdata -->
 <!-- <script type="text/javascript" src="testdata/sgfs.js"></script> -->
 
@@ -74,6 +84,6 @@ $(document).ready(function() {
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
   <div id="qunit-fixture">test markup, will be hidden</div>
-  <div id='glift_display1'><em></em></div>
+  <div id='glift_display'><em></em></div>
 </body>
 <html>
