--- a/src/BoxDisplayTest.html
+++ b/src/BoxDisplayTest.html
@@ -4,7 +4,7 @@
     <script type="text/javascript" src="libs/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="libs/raphael-min.js"></script>
 
-<script type="text/javascript" src="testdata/sgfs.js"></script>
+<!-- <script type="text/javascript" src="testdata/sgfs.js"></script> -->
 
 
 <!-- AUTO-GEN-DEPS -->
@@ -48,35 +48,35 @@
 
 <!-- END-AUTO-GEN-DEPS -->
     <style>
-      #otre_display1 {
+      #glift_display1 {
         position: relative;
         top: 0;
         width: 400px;
         height: 400px;
         float: left;
       }
-      #otre_display2 {
+      #glift_display2 {
         position: relative;
         top: 0;
         width: 300px;
         height: 400px;
         float: left;
       }
-      #otre_display3 {
+      #glift_display3 {
         position: relative;
         top: 0;
         width: 400px;
         height: 300px;
         float: left;
       }
-      #otre_display4 {
+      #glift_display4 {
         position: relative;
         top: 0;
         width: 400px;
         height: 300px;
         float: left;
       }
-      #otre_display5 {
+      #glift_display5 {
         position: relative;
         top: 0;
         width: 400px;
@@ -88,49 +88,45 @@
 
   <body>
     <div id="wrap" style="position:relative;">
-      <div id="otre_display1">
-      <div id="otre_display2">
-      <div id="otre_display3">
-      <div id="otre_display4">
-      <div id="otre_display5">
+      <div id="glift_display1">
+      <div id="glift_display2">
+      <div id="glift_display3">
+      <div id="glift_display4">
+      <div id="glift_display5">
         <script type="text/javascript">
-          var displayTypes = otre.enums.displayTypes;
-          var boardRegions = otre.enums.boardRegions;
-          logz = otre.util.logz;
+          var boardRegions = glift.enums.boardRegions;
+          logz = glift.util.logz;
 
-          var env = otre.display.environment.get({
-            divId: "otre_display1",
-            displayType: displayTypes.SIMPLE_BOARD
+          var env1 = glift.displays.environment.getInitialized({
+            divId: "glift_display1",
           });
-          env._debugDrawAll();
+          env1._debugDrawAll();
 
-          var env = otre.display.environment.get({
-            divId: "otre_display2",
-            displayType: displayTypes.EXPLAIN_BOARD
-            //displayType: disps.SIMPLE_BOARD
+          var env2 = glift.displays.environment.getInitialized({
+            divId: "glift_display2",
           });
-          env._debugDrawAll();
+          env2._debugDrawAll();
+          logz(env2.goBoardBox.topLeft);
+          logz(env2.goBoardBox.botRight);
+          logz(env2.divBox.topLeft);
+          logz(env2.divBox.botRight);
 
-          var env = otre.display.environment.get({
-            divId: "otre_display3",
-            displayType: displayTypes.EXPLAIN_BOARD
-            //displayType: disps.SIMPLE_BOARD
+          var env3 = glift.displays.environment.getInitialized({
+            divId: "glift_display3",
           });
-          env._debugDrawAll();
+          env3._debugDrawAll();
 
-          var env = otre.display.environment.get({
-            divId: "otre_display4",
-            displayType: displayTypes.EXPLAIN_BOARD,
+          var env4 = glift.displays.environment.getInitialized({
+            divId: "glift_display4",
             boardRegion: boardRegions.LEFT
           });
-          env._debugDrawAll();
+          env4._debugDrawAll();
 
-          var env = otre.display.environment.get({
-            divId: "otre_display5",
-            displayType: displayTypes.EXPLAIN_BOARD,
+          var env5 = glift.displays.environment.getInitialized({
+            divId: "glift_display5",
             boardRegion: boardRegions.TOP_LEFT
           });
-          env._debugDrawAll();
+          env5._debugDrawAll();
         </script>
       </div>
     </div>
