--- a/src/RealBoardTest.html
+++ b/src/RealBoardTest.html
@@ -35,10 +35,13 @@
 <script type="text/javascript" src="displays/environment_test.js"></script>
 <script type="text/javascript" src="displays/line_box.js"></script>
 <script type="text/javascript" src="displays/line_segments.js"></script>
+<script type="text/javascript" src="displays/resized_box.js"></script>
+<script type="text/javascript" src="displays/resized_box_test.js"></script>
 <!-- Displays raphael -->
 <script type="text/javascript" src="displays/raphael/raphael.js"></script>
 <script type="text/javascript" src="displays/raphael/board_base.js"></script>
 <script type="text/javascript" src="displays/raphael/boardlines.js"></script>
+<script type="text/javascript" src="displays/raphael/raphael_test.js"></script>
 <script type="text/javascript" src="displays/raphael/rutil.js"></script>
 <script type="text/javascript" src="displays/raphael/starpoints.js"></script>
 <script type="text/javascript" src="displays/raphael/stones.js"></script>
