--- a/src/BoxDisplayTest.html
+++ b/src/BoxDisplayTest.html
@@ -21,10 +21,12 @@
 <script type="text/javascript" src="util/point.js"></script>
 <script type="text/javascript" src="util/point_test.js"></script>
 <script type="text/javascript" src="util/regions.js"></script>
+<script type="text/javascript" src="util/test_util.js"></script>
 <script type="text/javascript" src="util/util_test.js"></script>
 <!-- Themes -->
 <script type="text/javascript" src="themes/themes.js"></script>
 <script type="text/javascript" src="themes/default.js"></script>
+<script type="text/javascript" src="themes/themes_test.js"></script>
 <!-- Displays -->
 <script type="text/javascript" src="displays/displays.js"></script>
 <script type="text/javascript" src="displays/bbox.js"></script>
