--- a/src/QunitTest.html
+++ b/src/QunitTest.html
@@ -16,6 +16,14 @@
   height: 400px;
   float: left;
 }
+
+#glift_display1 {
+  position: relative;
+  top: 0;
+  width: 300px;
+  height: 400px;
+  float: left;
+}
 </style>
 
 <!-- Testdata -->
@@ -35,10 +43,12 @@
 <script type="text/javascript" src="util/point.js"></script>
 <script type="text/javascript" src="util/point_test.js"></script>
 <script type="text/javascript" src="util/regions.js"></script>
+<script type="text/javascript" src="util/test_util.js"></script>
 <script type="text/javascript" src="util/util_test.js"></script>
 <!-- Themes -->
 <script type="text/javascript" src="themes/themes.js"></script>
 <script type="text/javascript" src="themes/default.js"></script>
+<script type="text/javascript" src="themes/themes_test.js"></script>
 <!-- Displays -->
 <script type="text/javascript" src="displays/displays.js"></script>
 <script type="text/javascript" src="displays/bbox.js"></script>
@@ -70,6 +80,7 @@ $(document).ready(function() {
   // otre.debugOn = true;
   glift.utilTest();
   glift.util.pointTest();
+  glift.themes.themesTest();
   glift.displays.bboxTest();
   glift.displays.cropboxTest();
   glift.displays.environmentTest();
@@ -88,6 +99,7 @@ $(document).ready(function() {
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
   <div id="qunit-fixture">test markup, will be hidden</div>
-  <div id='glift_display'><em></em></div>
+  <div id='glift_display'></div>
+  <div id='glift_display1'></div>
 </body>
 <html>
