--- a/src/RealBoardTest.html
+++ b/src/RealBoardTest.html
@@ -18,10 +18,12 @@
 <script type="text/javascript" src="util/point.js"></script>
 <script type="text/javascript" src="util/point_test.js"></script>
 <script type="text/javascript" src="util/regions.js"></script>
+<script type="text/javascript" src="util/test_util.js"></script>
 <script type="text/javascript" src="util/util_test.js"></script>
 <!-- Themes -->
 <script type="text/javascript" src="themes/themes.js"></script>
 <script type="text/javascript" src="themes/default.js"></script>
+<script type="text/javascript" src="themes/themes_test.js"></script>
 <!-- Displays -->
 <script type="text/javascript" src="displays/displays.js"></script>
 <script type="text/javascript" src="displays/bbox.js"></script>
@@ -49,21 +51,21 @@
 <!-- END-AUTO-GEN-DEPS -->
 
     <style>
-      #otre_display1 {
+      #glift_display1 {
         position: relative;
         top: 0;
         width: 400px;
         height: 300px;
         float: left;
       }
-      #otre_display2 {
+      #glift_display2 {
         position: relative;
         top: 0;
         width: 400px;
         height: 300px;
         float: left;
       }
-      #otre_display3 {
+      #glift_display3 {
         position: relative;
         top: 0;
         width: 400px;
@@ -75,28 +77,31 @@
 
   <body>
     <div id="wrap" style="position:relative;">
-      <div id="otre_display1"></div>
-      <div id="otre_display2"></div>
-      <div id="otre_display3"></div>
+      <div id="glift_display1"></div>
+      <div id="glift_display2"></div>
+      <div id="glift_display3"></div>
         <script type="text/javascript">
           //parsing test
-          var displayTypes = otre.enums.displayTypes;
-          var boardRegions = otre.enums.boardRegions;
-          logz = otre.util.logz;
+          var displayTypes = glift.enums.displayTypes;
+          var boardRegions = glift.enums.boardRegions;
+          var point = glift.util.point;
+          logz = glift.util.logz;
 
-          var env = otre.getInstance({
-            divId: "otre_display1",
-            displayType: displayTypes.SIMPLE_BOARD
+          var display = glift.create({
+            divId: "glift_display1",
           });
+          display.setColor(point(16, 4), 'BLACK');
+          display.setColor(point(15, 4), 'WHITE');
 
-          var env = otre.getInstance({
-            divId: "otre_display2",
-            displayType: displayTypes.SIMPLE_BOARD,
+          var display2 = glift.create({
+            divId: "glift_display2",
             boardRegion: boardRegions.TOP_RIGHT
           });
-          var env = otre.getInstance({
-            divId: "otre_display3",
-            displayType: displayTypes.SIMPLE_BOARD,
+          display2.setColor(point(16, 4), 'BLACK');
+          display2.setColor(point(15, 4), 'WHITE');
+
+          var display3 = glift.create({
+            divId: "glift_display3",
             boardRegion: boardRegions.BOTTOM
           });
 
