Working on adding marks.  Thinking about whether to add stone bboxes as a separate object, or to combine all the intersection objects into one.

--- a/src/BoxDisplayTest.html
+++ b/src/BoxDisplayTest.html
@@ -46,6 +46,7 @@
 <script type="text/javascript" src="displays/raphael/raphael.js"></script>
 <script type="text/javascript" src="displays/raphael/board_base.js"></script>
 <script type="text/javascript" src="displays/raphael/boardlines.js"></script>
+<script type="text/javascript" src="displays/raphael/marks.js"></script>
 <script type="text/javascript" src="displays/raphael/raphael_test.js"></script>
 <script type="text/javascript" src="displays/raphael/rutil.js"></script>
 <script type="text/javascript" src="displays/raphael/starpoints.js"></script>
