Fixing compilation bugs.  Adding tracked compiled versions.

--- a/src/QunitTest.html
+++ b/src/QunitTest.html
@@ -32,7 +32,6 @@
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
 <script type="text/javascript" src="./glift.js"></script>
-<script type="text/javascript" src="./glift_test.js"></script>
 <script type="text/javascript" src="./options.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="util/util.js"></script>
@@ -41,38 +40,44 @@
 <script type="text/javascript" src="util/logger.js"></script>
 <script type="text/javascript" src="util/math.js"></script>
 <script type="text/javascript" src="util/point.js"></script>
-<script type="text/javascript" src="util/point_test.js"></script>
 <script type="text/javascript" src="util/regions.js"></script>
 <script type="text/javascript" src="util/test_util.js"></script>
-<script type="text/javascript" src="util/util_test.js"></script>
 <!-- Themes -->
 <script type="text/javascript" src="themes/themes.js"></script>
 <script type="text/javascript" src="themes/default.js"></script>
-<script type="text/javascript" src="themes/themes_test.js"></script>
 <!-- Displays -->
 <script type="text/javascript" src="displays/displays.js"></script>
 <script type="text/javascript" src="displays/bbox.js"></script>
-<script type="text/javascript" src="displays/bbox_test.js"></script>
 <script type="text/javascript" src="displays/board_points.js"></script>
-<script type="text/javascript" src="displays/board_points_test.js"></script>
 <script type="text/javascript" src="displays/cropbox.js"></script>
-<script type="text/javascript" src="displays/cropbox_test.js"></script>
 <script type="text/javascript" src="displays/display_base.js"></script>
 <script type="text/javascript" src="displays/environment.js"></script>
-<script type="text/javascript" src="displays/environment_test.js"></script>
 <script type="text/javascript" src="displays/line_box.js"></script>
 <script type="text/javascript" src="displays/line_segments.js"></script>
 <script type="text/javascript" src="displays/resized_box.js"></script>
-<script type="text/javascript" src="displays/resized_box_test.js"></script>
 <!-- Displays raphael -->
 <script type="text/javascript" src="displays/raphael/raphael.js"></script>
 <script type="text/javascript" src="displays/raphael/board_base.js"></script>
 <script type="text/javascript" src="displays/raphael/boardlines.js"></script>
 <script type="text/javascript" src="displays/raphael/marks.js"></script>
-<script type="text/javascript" src="displays/raphael/raphael_test.js"></script>
 <script type="text/javascript" src="displays/raphael/rutil.js"></script>
 <script type="text/javascript" src="displays/raphael/starpoints.js"></script>
 <script type="text/javascript" src="displays/raphael/stones.js"></script>
+<!-- Otre Tests -->
+<script type="text/javascript" src="./glift_test.js"></script>
+<!-- Util Tests -->
+<script type="text/javascript" src="util/point_test.js"></script>
+<script type="text/javascript" src="util/util_test.js"></script>
+<!-- Themes Tests -->
+<script type="text/javascript" src="themes/themes_test.js"></script>
+<!-- Displays Tests -->
+<script type="text/javascript" src="displays/bbox_test.js"></script>
+<script type="text/javascript" src="displays/board_points_test.js"></script>
+<script type="text/javascript" src="displays/cropbox_test.js"></script>
+<script type="text/javascript" src="displays/environment_test.js"></script>
+<script type="text/javascript" src="displays/resized_box_test.js"></script>
+<!-- Displays raphael Tests -->
+<script type="text/javascript" src="displays/raphael/raphael_test.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
 
