--- a/src/RealBoardTest.html
+++ b/src/RealBoardTest.html
@@ -7,11 +7,11 @@
 <!-- AUTO-GEN-DEPS -->
 <!-- Otre -->
 <script type="text/javascript" src="./glift.js"></script>
-<script type="text/javascript" src="./options.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="util/util.js"></script>
 <script type="text/javascript" src="util/colors.js"></script>
 <script type="text/javascript" src="util/enums.js"></script>
+<script type="text/javascript" src="util/errors.js"></script>
 <script type="text/javascript" src="util/logger.js"></script>
 <script type="text/javascript" src="util/math.js"></script>
 <script type="text/javascript" src="util/point.js"></script>
@@ -25,10 +25,10 @@
 <script type="text/javascript" src="displays/bbox.js"></script>
 <script type="text/javascript" src="displays/board_points.js"></script>
 <script type="text/javascript" src="displays/cropbox.js"></script>
-<script type="text/javascript" src="displays/display_base.js"></script>
 <script type="text/javascript" src="displays/environment.js"></script>
 <script type="text/javascript" src="displays/line_box.js"></script>
 <script type="text/javascript" src="displays/line_segments.js"></script>
+<script type="text/javascript" src="displays/options.js"></script>
 <script type="text/javascript" src="displays/resized_box.js"></script>
 <!-- Displays raphael -->
 <script type="text/javascript" src="displays/raphael/raphael.js"></script>
@@ -53,7 +53,11 @@
 <!-- Controllers -->
 <script type="text/javascript" src="controllers/controllers.js"></script>
 <script type="text/javascript" src="controllers/base_controller.js"></script>
+<script type="text/javascript" src="controllers/options.js"></script>
 <script type="text/javascript" src="controllers/static_problem_study.js"></script>
+<!-- Bridge -->
+<script type="text/javascript" src="bridge/bridge.js"></script>
+<script type="text/javascript" src="bridge/cropping.js"></script>
 <!-- Otre Tests -->
 <script type="text/javascript" src="./glift_test.js"></script>
 <!-- Util Tests -->
@@ -79,6 +83,8 @@
 <script type="text/javascript" src="controllers/base_controller_test.js"></script>
 <script type="text/javascript" src="controllers/controllers_test.js"></script>
 <script type="text/javascript" src="controllers/static_problem_study_test.js"></script>
+<!-- Bridge Tests -->
+<script type="text/javascript" src="bridge/cropping_test.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
 
