Added some cool theme additions (shadows).

--- a/src/RealBoardTest.html
+++ b/src/RealBoardTest.html
@@ -20,6 +20,7 @@
 <!-- Themes -->
 <script type="text/javascript" src="themes/themes.js"></script>
 <script type="text/javascript" src="themes/default.js"></script>
+<script type="text/javascript" src="themes/depth.js"></script>
 <!-- Displays -->
 <script type="text/javascript" src="displays/displays.js"></script>
 <script type="text/javascript" src="displays/bbox.js"></script>
