Moving tests to HTML tests.  moving raphael to board.

--- a/src/htmltests/RealBoardTest.html
+++ b/src/htmltests/RealBoardTest.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="../util/colors.js"></script>
 <script type="text/javascript" src="../util/enums.js"></script>
 <script type="text/javascript" src="../util/errors.js"></script>
+<script type="text/javascript" src="../util/id_generator.js"></script>
 <script type="text/javascript" src="../util/logger.js"></script>
 <script type="text/javascript" src="../util/math.js"></script>
 <script type="text/javascript" src="../util/point.js"></script>
@@ -31,15 +32,15 @@
 <script type="text/javascript" src="../displays/line_segments.js"></script>
 <script type="text/javascript" src="../displays/options.js"></script>
 <script type="text/javascript" src="../displays/resized_box.js"></script>
-<!-- Displays raphael -->
-<script type="text/javascript" src="../displays/raphael/raphael.js"></script>
-<script type="text/javascript" src="../displays/raphael/board_base.js"></script>
-<script type="text/javascript" src="../displays/raphael/boardlines.js"></script>
-<script type="text/javascript" src="../displays/raphael/marks.js"></script>
-<script type="text/javascript" src="../displays/raphael/rutil.js"></script>
-<script type="text/javascript" src="../displays/raphael/starpoints.js"></script>
-<script type="text/javascript" src="../displays/raphael/stone.js"></script>
-<script type="text/javascript" src="../displays/raphael/stones.js"></script>
+<!-- Displays board -->
+<script type="text/javascript" src="../displays/board/board.js"></script>
+<script type="text/javascript" src="../displays/board/board_base.js"></script>
+<script type="text/javascript" src="../displays/board/boardlines.js"></script>
+<script type="text/javascript" src="../displays/board/marks.js"></script>
+<script type="text/javascript" src="../displays/board/rutil.js"></script>
+<script type="text/javascript" src="../displays/board/starpoints.js"></script>
+<script type="text/javascript" src="../displays/board/stone.js"></script>
+<script type="text/javascript" src="../displays/board/stones.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
@@ -63,6 +64,7 @@
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/basic_problem.js"></script>
+<script type="text/javascript" src="../widgets/problem_series.js"></script>
 <!-- Otre Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
 <!-- Util Tests -->
@@ -76,8 +78,8 @@
 <script type="text/javascript" src="../displays/cropbox_test.js"></script>
 <script type="text/javascript" src="../displays/environment_test.js"></script>
 <script type="text/javascript" src="../displays/resized_box_test.js"></script>
-<!-- Displays raphael Tests -->
-<script type="text/javascript" src="../displays/raphael/raphael_test.js"></script>
+<!-- Displays board Tests -->
+<script type="text/javascript" src="../displays/board/board_test.js"></script>
 <!-- Rules Tests -->
 <script type="text/javascript" src="../rules/goban_test.js"></script>
 <script type="text/javascript" src="../rules/intersections_test.js"></script>
