Moved raphael code around.  Added basic centering function.

--- a/src/htmltests/SeriesTester.html
+++ b/src/htmltests/SeriesTester.html
@@ -31,6 +31,7 @@
 <script type="text/javascript" src="../displays/displays.js"></script>
 <script type="text/javascript" src="../displays/bbox.js"></script>
 <script type="text/javascript" src="../displays/board_points.js"></script>
+<script type="text/javascript" src="../displays/center.js"></script>
 <script type="text/javascript" src="../displays/cropbox.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
@@ -42,10 +43,14 @@
 <script type="text/javascript" src="../displays/board/board_base.js"></script>
 <script type="text/javascript" src="../displays/board/boardlines.js"></script>
 <script type="text/javascript" src="../displays/board/marks.js"></script>
-<script type="text/javascript" src="../displays/board/rutil.js"></script>
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
 <script type="text/javascript" src="../displays/board/stone.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
+<!-- Displays raphael -->
+<script type="text/javascript" src="../displays/raphael/raphael.js"></script>
+<script type="text/javascript" src="../displays/raphael/icons.js"></script>
+<script type="text/javascript" src="../displays/raphael/position.js"></script>
+<script type="text/javascript" src="../displays/raphael/util.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
@@ -80,6 +85,7 @@
 <!-- Displays Tests -->
 <script type="text/javascript" src="../displays/bbox_test.js"></script>
 <script type="text/javascript" src="../displays/board_points_test.js"></script>
+<script type="text/javascript" src="../displays/center_test.js"></script>
 <script type="text/javascript" src="../displays/cropbox_test.js"></script>
 <script type="text/javascript" src="../displays/environment_test.js"></script>
 <script type="text/javascript" src="../displays/resized_box_test.js"></script>
