Adding buttons, centering, icons.

--- a/src/htmltests/BoxDisplayTest.html
+++ b/src/htmltests/BoxDisplayTest.html
@@ -46,6 +46,7 @@
 <script type="text/javascript" src="../displays/board/stones.js"></script>
 <!-- Displays raphael -->
 <script type="text/javascript" src="../displays/raphael/raphael.js"></script>
+<script type="text/javascript" src="../displays/raphael/buttons.js"></script>
 <script type="text/javascript" src="../displays/raphael/icons.js"></script>
 <script type="text/javascript" src="../displays/raphael/position.js"></script>
 <script type="text/javascript" src="../displays/raphael/util.js"></script>
@@ -72,6 +73,7 @@
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/basic_problem.js"></script>
+<script type="text/javascript" src="../widgets/icon_bar.js"></script>
 <script type="text/javascript" src="../widgets/problem_series.js"></script>
 <!-- Otre Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
