--- a/src/htmltests/RealBoardTest.html
+++ b/src/htmltests/RealBoardTest.html
@@ -43,6 +43,7 @@
 <script type="text/javascript" src="../displays/board/stones.js"></script>
 <!-- Displays raphael -->
 <script type="text/javascript" src="../displays/raphael/raphael.js"></script>
+<script type="text/javascript" src="../displays/raphael/buttons.js"></script>
 <script type="text/javascript" src="../displays/raphael/icons.js"></script>
 <script type="text/javascript" src="../displays/raphael/position.js"></script>
 <script type="text/javascript" src="../displays/raphael/util.js"></script>
@@ -69,6 +70,7 @@
 <!-- Widgets -->
 <script type="text/javascript" src="../widgets/widgets.js"></script>
 <script type="text/javascript" src="../widgets/basic_problem.js"></script>
+<script type="text/javascript" src="../widgets/icon_bar.js"></script>
 <script type="text/javascript" src="../widgets/problem_series.js"></script>
 <!-- Otre Tests -->
 <script type="text/javascript" src=".././glift_test.js"></script>
