--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -123,7 +123,7 @@
       <div id="glift_display1"></div>
       <div id="extra_info"></div>
       <script type="text/javascript">
-        var basicProblem = glift.widgets.createBasicProblem({
+        var basicProblem = glift.widgets.basicProblem({
           sgfString: testdata.sgfs.complexproblem,
           divId: "glift_display1"
         });
