--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -39,7 +39,6 @@
 <script type="text/javascript" src="../displays/board/board.js"></script>
 <script type="text/javascript" src="../displays/board/board_base.js"></script>
 <script type="text/javascript" src="../displays/board/boardlines.js"></script>
-<script type="text/javascript" src="../displays/board/marks.js"></script>
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
 <script type="text/javascript" src="../displays/board/stone.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
@@ -47,6 +46,7 @@
 <script type="text/javascript" src="../displays/raphael/raphael.js"></script>
 <script type="text/javascript" src="../displays/raphael/buttons.js"></script>
 <script type="text/javascript" src="../displays/raphael/icons.js"></script>
+<script type="text/javascript" src="../displays/raphael/mark.js"></script>
 <script type="text/javascript" src="../displays/raphael/position.js"></script>
 <script type="text/javascript" src="../displays/raphael/util.js"></script>
 <!-- Rules -->
