Changing bbox usage in 'stone' to button implementation.

--- a/src/htmltests/IconBarTester.html
+++ b/src/htmltests/IconBarTester.html
@@ -142,9 +142,9 @@
         });
 
         iconBar.forEachIcon(function(icon) {
-          icon.button.setHover(function() {
+          icon.button.setMouseOver(function() {
             icon.obj.attr({fill:'blue'});
-          }, function() {
+          }).setMouseOut(function() {
             icon.obj.attr(iconBar.subTheme['DEFAULT']);
           });
         });
