--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -63,6 +63,7 @@
 <script type="text/javascript" src="../displays/board/board.js"></script>
 <script type="text/javascript" src="../displays/board/board_base.js"></script>
 <script type="text/javascript" src="../displays/board/boardlines.js"></script>
+<script type="text/javascript" src="../displays/board/intersection_line.js"></script>
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
 <script type="text/javascript" src="../displays/board/stone.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
