--- a/src/htmltests/SeriesTester.html
+++ b/src/htmltests/SeriesTester.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<title> ProblemTester </title>
+<title> SeriesTester </title>
 <script type="text/javascript" src="../libs/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="../libs/raphael-min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
@@ -42,6 +42,7 @@
 <script type="text/javascript" src="../displays/board/board.js"></script>
 <script type="text/javascript" src="../displays/board/board_base.js"></script>
 <script type="text/javascript" src="../displays/board/boardlines.js"></script>
+<script type="text/javascript" src="../displays/board/intersection_line.js"></script>
 <script type="text/javascript" src="../displays/board/starpoints.js"></script>
 <script type="text/javascript" src="../displays/board/stone.js"></script>
 <script type="text/javascript" src="../displays/board/stones.js"></script>
@@ -133,12 +134,20 @@
       <div id="glift_display"></div>
       <div id="extra_info"></div>
       <script type="text/javascript">
-        var basicProblem = glift.widgets.problemSeries({
-          sgfString: testdata.sgfs.complexproblem,
-          divId: "glift_display",
-          theme: "DEPTH",
-          goBoardBackground: '../themes/assets/bambootile_warm.jpg'
-        });
+        (function() {
+          var d = new Date();
+          var begin = d.getTime();
+          var basicProblem = glift.widgets.problemSeries({
+            sgfString: testdata.sgfs.complexproblem,
+            divId: "glift_display",
+            theme: "DEPTH",
+            goBoardBackground: '../themes/assets/bambootile_warm.jpg'
+          });
+          var d = new Date();
+          var after = d.getTime();
+          console.log('---finished---');
+          console.log(after - begin);
+        })();
       </script>
     </div>
   </body>
